--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" data-framework="es6">
   <head>
     <meta charset="utf-8">
@@ -6,6 +7,5 @@
   <body>
     <section class="todoapp" id="root">
     </section>
-<script src="../src/index.js"></script>
   </body>
 </html>
